updated ilbgw manifest

--- a/istio-configuration/ilbgateway.yaml
+++ b/istio-configuration/ilbgateway.yaml
@@ -17,3 +17,5 @@ spec:
                 port: 80
               - name: https
                 port: 443
+  meshConfig:
+    accessLogFile: "/dev/stdout"
