--- a/istio-configuration/ilb-gateway.yaml
+++ b/istio-configuration/ilb-gateway.yaml
@@ -11,11 +11,13 @@ spec:
             cloud.google.com/load-balancer-type: "internal"
           service:
             ports:
-              - name: status-port
-                port: 15020
-              - name: http2
-                port: 80
-              - name: https
-                port: 443
+            - name: status-port
+              port: 15020
+            - name: http2
+              port: 80
+              targetPort: 8080
+            - name: https
+              port: 443
+              targetPort: 8443
   meshConfig:
     accessLogFile: "/dev/stdout"
